<resources>
    <string name="app_name">PesanPalgading 2.0</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="nama">Nama</string>
    <string name="meja">Meja</string>
    <string name="refresh">Refresh</string>
    <string name="edit_manual">Edit Manual</string>
    <string name="kode_meja">Kode Meja</string>
    <string name="masuk">Masuk</string>
    <string name="lihat_menu">Lihat Menu</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="rekomendasi_kami">Rekomendasi Kami :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Mie Ayam -->
    <string name="MenuMieAyam1">Mie Ayam Original </string>
    <string name="DescMenuMieAyam1">(Kuah/Goreng)</string>
    <string name="MenuMieAyam2">Mie Ayam Jumbo</string>
    <string name="DescMenuMieAyam2">(Kuah/Goreng)</string>
    <string name="MenuMieAyam3">Mie Ayam Super Jumbo Komplit</string>
    <string name="Desc1MenuMieAyam3">(Kuah/Goreng)</string>
    <string name="Desc2MenuMieAyam3">(Extra ayam, tetelan sapi \n &amp; bakso sapi)</string>

    <!-- Topping Mie Ayam -->
    <string name="ToppingMieAyam1">Extra Ayam</string>
    <string name="ToppingMieAyam2">Extra Tetelan Sapi</string>
    <string name="ToppingMieAyam3">Cakar (2pcs)</string>
    <string name="ToppingMieAyam4">Kepala (/pcs)</string>
    <string name="ToppingMieAyam5">Bakso Asli Sapi (/pcs)</string>
    <string name="ToppingMieAyam6">Telur Mata Sapi</string>
    <string name="ToppingMieAyam7">Balungan Rica Ayam</string>
    <string name="ToppingMieAyam8">Extra Sawi</string>
    <string name="ToppingMieAyam9">Extra Acar</string>

    <!-- Bakso Kuah -->
    <string name="MenuBaksoKuah1">Bakso Hore</string>
    <string name="Desc1MenuBaksoKuah1">(Urat/Halus/Campur)</string>
    <string name="Desc2MenuBaksoKuah1">(3 pentol bakso sapi asli, 1 tahu bakso, 1 pangsit goreng, 1 pangsit kukus)</string>
    <string name="MenuBaksoKuah2">Bakso Yummie</string>
    <string name="Desc1MenuBaksoKuah2">(Urat/Halus/Campur)</string>
    <string name="Desc2MenuBaksoKuah2">(4 pentol bakso sapi asli, 1 tahu bakso, 1 pangsit goreng, 1 pangsit kukus)</string>
    <string name="MenuBaksoKuah3">Bakso Happy</string>
    <string name="Desc1MenuBaksoKuah3">(Urat/Halus/Campur)</string>
    <string name="Desc2MenuBaksoKuah3">(5 pentol bakso sapi asli, 1 tahu bakso, 1 pangsit goreng, 1 pangsit kukus)</string>


    <!-- Topping Bakso Kuah -->
    <string name="ToppingBaksoKuah1">1 Pentol Bakso Urat/Halus</string>
    <string name="ToppingBaksoKuah2">1 Pangsit Goreng/Kukus</string>
    <string name="ToppingBaksoKuah3">1 Tahu Bakso</string>
    <string name="ToppingBaksoKuah4">Tetelan Sapi</string>
    <string name="ToppingBaksoKuah5">Kuah Bakso, Mie Kuning \n &amp; Mie Soon</string>


    <!-- Bakso jumbo -->
    <string name="MenuBaksoJumbo1">Bakso Judez (Jumbo Pedezz)</string>
    <string name="DescMenuBaksoJumbo1">(Bakso sapi jumbo dalamnya ada daging sapi cincang bumbu pedas)</string>
    <string name="MenuBaksoJumbo2">Bakso Jumbo Tidak Pedas</string>
    <string name="DescMenuBaksoJumbo2">(Bakso jumbo dengan full daging sapi asli)</string>
    <string name="MenuBaksoJumbo3">Bakso Jumbo Isian Tetelan</string>
    <string name="DescMenuBaksoJumbo3">(Bakso jumbo dengan isian didalamnya ada tetelan sapi asli)</string>
    <string name="MenuBaksoJumbo4">Bakso Bagong</string>
    <string name="DescMenuBaksoJumbo4">(Bakso super jumbo sapi asli dengan isian daging sapi cincang &amp; telur puyuh)</string>
    <string name="NBMenuBaksoJumbo">NB : Tambahan varian kuah pedas</string>

    <!-- Topping Bakso jumbo -->
    <string name="ToppingBaksoJumbo1">Extra Tetelan Sapi</string>
    <string name="ToppingBaksoJumbo2">Extra Pangsit</string>
    <string name="ToppingBaksoJumbo3">Extra Tahu Bakso</string>

    <!-- Bakso Bakar -->
    <string name="MenuBaksoBakar1">Bakso Bakar Hore</string>
    <string name="DescMenuBaksoBakar1">(Pedas/Manis)</string>
    <string name="MenuBaksoBakar2">Bakso Bakar Yummie</string>
    <string name="DescMenuBaksoBakar2">(Pedas/Manis)</string>


    <!-- Tambahan Bakso Bakar -->
    <string name="TambahanBaksoBakar1">Extra Kuah, Mie &amp; Soon</string>
    <string name="TambahanBaksoBakar2">Extra Pangsit Goreng (/pcs)</string>
    <string name="TambahanBaksoBakar3">Extra Tahu Bakso (/pcs)</string>

    <!-- Nasi Soto -->
    <string name="MenuSoto1">Nasi Soto Daging Sapi</string>
    <string name="MenuSoto2">Soto Daging Sapi (Tanpa Nasi)</string>
    <string name="MenuSoto3">Nasi Soto Ayam</string>
    <string name="MenuSoto4">Nasi Soto (Tanpa Nasi)</string>


    <!-- Tambahan Bakso jumbo -->
    <string name="TambahanSoto1">Tetelan Sapi</string>


    <!-- Judul Minuman Aneka Es Original-->
    <string name="MenuEs">Aneka Es Original</string>
    <!-- Minuman Aneka Es Original-->
    <string name="MenuEs1">Es Teller Palgading</string>
    <string name="MenuEs2">Es Campur Gula Jawa</string>
    <string name="MenuEs3">Es Pelangi</string>
    <string name="MenuEs4">Es Manado</string>
    <string name="MenuEs5">Es Cendol Pelangi</string>
    <string name="MenuEs6">Es Cincau Hitam</string>
    <string name="MenuEs7">Es Capcin (Capucino Cincau) </string>
    <string name="MenuEs8">Es Micin (Milo Cincau) </string>
    <string name="MenuEs9">Milkshake Oreo</string>
    <string name="MenuEs10">Es / Hot Milo</string>
    <string name="MenuEs11">Es / Hot Capucino</string>
    <string name="MenuEs12">Es / Hot Chocolate</string>
    <string name="MenuEs13">Es / Hot Teh</string>
    <string name="MenuEs14">Es / Hot Jeruk</string>
    <string name="MenuEs15">Es Sirup</string>
    <string name="MenuEs16">Es Saparela</string>
    <string name="MenuEs17">Es Soda Gembira</string>
    <string name="MenuEs18">Kopi Hitam</string>

    <!-- Judul Minuman Aneka Es Durian-->
    <string name="MenuEsDurian">Aneka Es Durian</string>
    <!-- Minuman Aneka Es Durian-->
    <string name="MenuEsDurian1">Es Teller Durian</string>
    <string name="MenuEsDurian2">Es Campur Gula Jawa Durian</string>
    <string name="MenuEsDurian3">Es Pelangi Durian</string>
    <string name="MenuEsDurian4">Es Degan Durian</string>
    <string name="MenuEsDurian5">Es Alpukat Durian</string>
    <string name="MenuEsDurian6">Es Alpukat Degan Durian</string>
    <string name="MenuEsDurian7">Es Cincau Hitam Durian</string>

    <!-- Judul Minuman Aneka Es Jus-->
    <string name="MenuEsJus">Aneka Es Jus</string>
    <!-- Minuman Aneka Es Jus-->
    <string name="MenuEsJus1">Juice Melon</string>
    <string name="MenuEsJus2">Juice Mangga</string>
    <string name="MenuEsJus3">Juice Alpukat</string>
    <string name="MenuEsJus4">Juice Semangka</string>
    <string name="MenuEsJus5">Juice Jambu Merah</string>
    <string name="MenuEsJus6">Juice Sirsat</string>
    <string name="MenuEsJus7">Juice Durian</string>
    <string name="MenuEsJus8">Juice Jeruk</string>

    <!-- Menu Jajanan-->
    <string name="MenuJajanan">Jajanan</string>
    <!-- Menu Jajanan-->
    <string name="MenuJajanan1">French Fries</string>
    <string name="DescMenuJajanan1">(Kentang Goreng)</string>
    <string name="MenuJajanan2">Tela-Telo</string>
    <string name="MenuJajanan3">Batagor</string>


    <string name="toppingMieAyam">Topping Mie Ayam :</string>
    <string name="toppingBaksoKuah">Topping Bakso :</string>

    <string-array name="toppingMieAyam">
        <item>Extra Ayam  (Rp.3000)</item>
        <item>Extra Tetelan Sapi  (Rp.7000)</item>
        <item>Cakar  (Rp.4000)(2pcs)</item>
        <item>Kepala  (Rp.4000)/pcs</item>
        <item>Bakso Asli Sapi  (Rp.3000)/pcs</item>
        <item>Telur Mata Sapi  (Rp.4000)</item>
        <item>Balungan Rica Ayam  (Rp.4000)</item>
        <item>Extra Sawi  (Rp.1000)</item>
        <item>Extra Acar  (Rp.1000)</item>
    </string-array>

    <string-array name="toppingBaksoKuah">
        <item>1 Pentol Bakso Urat/Halus  (Rp.3000)</item>
        <item>1 Pangsit Goreng/Kukus  (Rp.1500)/pcs</item>
        <item>1 Tahu Bakso  (Rp.1500)/pcs</item>
        <item>Tetelan Sapi  (Rp.7000)</item>
        <item>Kuah Bakso,Mie Kuning, &amp; Mie Soon  (Rp.2000)</item>
    </string-array>

</resources>