<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginForm"
    android:backgroundTint="@color/pal1c1"
    android:id="@+id/ContainerLogin"
    android:background="@color/black">


    <LinearLayout
        android:id="@+id/ContainerContentLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/LogoLogin"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:paddingBottom="-50dp"
                android:src="@drawable/logowhite" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TvNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/EdNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:outlineAmbientShadowColor="@color/white"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TvMeja"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/meja"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/ProgressBar"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="120dp"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/SpinnerMeja"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/white"
                    android:outlineAmbientShadowColor="@color/white"
                    android:outlineSpotShadowColor="@color/white"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/TvLokasiMeja"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text=" "
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/BtnRefreshMeja"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="120dp"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/palprofil"
                    android:onClick="RandomizeCode"
                    android:text="@string/refresh"
                    android:textColor="@color/white"
                    android:textSize="12sp" />


                <Button
                    android:id="@+id/BtnManualMeja"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="230dp"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/palprofil"
                    android:onClick="EditSpinner"
                    android:text="@string/edit_manual"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TvKodeMeja"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/kode_meja"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/EdKodeMeja"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:enabled="false"
                android:outlineAmbientShadowColor="@color/white"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="35dp"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/ProgressBarMasuk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <Button
                android:id="@+id/BtnMasuk"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/selectorloginbutton"
                android:text="@string/masuk"
                android:visibility="visible"
                android:textColor="@drawable/selectortextcolorbutton" />


            <Button
                android:id="@+id/BtnLihatMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/selectorloginbutton"
                android:text="@string/lihat_menu"
                android:textColor="@drawable/selectortextcolorbutton" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>