<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewMenuHome.JajananMenuFragment"
    android:background="@color/black">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MenuJajanan"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:fontFamily="@font/monserratmedium"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="5dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/MenuJajanan1"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:fontFamily="@font/monserratmedium"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="@string/DescMenuJajanan1"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="italic"
                            android:fontFamily="@font/monserratmedium"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/TxtvHargaJajanan1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:gravity="right"
                        android:text="Rp 10.000"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/monserratmedium"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/MenuJajanan2"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:fontFamily="@font/monserratmedium"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/TxtvHargaJajanan2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:gravity="right"
                        android:text="Rp 10.000"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/monserratmedium"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/MenuJajanan3"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:fontFamily="@font/monserratmedium"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/TxtvHargaJajanan3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:gravity="right"
                        android:text="Rp 10.000"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/monserratmedium"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>